--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
         background-color: #fffcf4;
     }
 
+    main {
+        max-width: 50em;
+        }
+
+
     h1 {
         color: #4a4a4a;
         margin-top: 5%;
